# sidt-smart_insulin_digital_twin

./: pyproject.toml  requirements.txt
app_ui/: Home.py
app_ui/pages/: 1_Simulate_Patient.py  2_Design_Nano_Release.py  3_Manufacturability_DNA.py  4_AI_Optimize_System.py  5_Reports_Exports.py
backend/: __init__.py
backend/core/: __init__.py  io.py  metrics.py  models.py  plotting.py
backend/manufacturability/: __init__.py  codon_opt.py  qc_checks.py  reverse_translate.py  scoring.py
backend/manufacturability/codon_tables/: cho.json  hek.json
backend/nano/: __init__.py  release_models.py
backend/optimize/: __init__.py  objectives.py  optuna_runner.py  search_space.py
backend/physiology/: __init__.py  minimal_model.py  scenarios.py  simulator.py
examples/: demo_config.json
smart_insulin_digital_twin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
