[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-insulin-digital-twin"
version = "1.0.0"
description = "Advanced in silico optimization platform for insulin delivery systems"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Smart Insulin Team", email = "research@smartinsulin.org"}
]
keywords = ["insulin", "digital-twin", "glucose", "simulation", "optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "streamlit>=1.28.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "optuna>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/ghasn43/smartinsulin"
Documentation = "https://github.com/ghasn43/smartinsulin/wiki"
Repository = "https://github.com/ghasn43/smartinsulin.git"
"Bug Tracker" = "https://github.com/ghasn43/smartinsulin/issues"

[tool.setuptools]
packages = ["backend", "backend.core", "backend.physiology", "backend.manufacturability", "backend.nano", "backend.optimize"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py10', 'py11']

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=backend --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
